--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<video id="videoBG" autoplay muted loop>
+<video id="videoBG" onloadedmetadata="this.muted=true" preload="auto" autoplay muted loop>
   <source
     src="../../../assets/videos/90s Retro Bedroom Live Wallpaper for PC_Mac + FREE Download 4K Desktop Screensaver.mp4"
     type="video/mp4"
