--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,8 @@
 html,
 body {
     overflow: hidden;
+    background-image: url("./assets/wp4809768-retro-4k-hd-wallpapers.jpg");
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
