--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,6 +21,16 @@
             </a>
         </div>
     </div>
+    <div class="row">
+        <div class="col-4">
+            <p>This is my first Portfolio as a web developer</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Click here to win a FREE Iphone</a>
+        </div>
+    </div>
 </div>
 
 <embed src="../../../assets/Mr.Kitty - After Dark (chorus).mp3" loop="true" autostart="true" width="2" height="0">
