--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -29,7 +29,7 @@ body {
     margin: 3vh;
 }
 
-a {
+.name {
     font-family: "Staatliches", cursive;
     font-size: 7vw;
     text-decoration: none;
@@ -40,7 +40,21 @@ a {
     transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
-.name:hover {
+p,
+a {
+    font-family: "Staatliches", cursive;
+    font-size: 1.5vw;
+    text-decoration: none;
+    box-shadow: inset 0 0 0 0 white;
+    color: white;
+    margin: 0 -0.25rem;
+    padding: 0 0.25rem;
+    transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.name:hover,
+p:hover,
+a:hover {
     box-shadow: inset 700px 0 0 0 white;
     color: black;
 }
